--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: axel-op/dart-package-analyzer@v3
         with:
           # Required:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          githubToken: ${{ secrets.GIT_TOKEN }}
           # Optional:
           relativePath: packages/lib/
